--- a/index.html
+++ b/index.html
@@ -4,29 +4,30 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=width-device, initial-scale=1 strink-to-fit=no" />
-<meta description="Wedsite development, Web design" />
-<title>Introduction to Web Development </title>
-<link rel="stylesheet" type="text/css" href="mycss/app.css" />
+<meta description="Website development, Web design" />
+<title>Luis's Blog </title>
+<link rel="stylesheet" type="text/css" href="mycss/myblog.css" />
+<script type="text/javascript" src="myjsfiles/mytasks.js"/> </script>
 
 </head>
-
 <body>
+<div id="mypage">
+<div id="banner"> Luis' Blog</div>
+<div id="topnav"> 
+<ul>
+<li> <a href="#"> About me </a> </li> |
+<li> <a href="#"> Contact me </a> </li> |
+<li> <a href="#"> Hobbies </a> </li> |
+<li> <a href="#"> Education </a> </li>
+</ul>
+</div>
 
-<p>Welcome to Unit 15: Website Development </p>
+<div id="contentarea">
+<p> Latest post</p>
+ </div>
 
-<span> Some HTML Headings </span>
+<div id="pagefooter"> My copyright 2025 </div>
 
-<h1>This is heading one </h1>
-<h2>This is heading two </h2>
-<h3>This is heading three</h3>
-<h4>This is heading four</h4>
-<h5>This is heading five</h5>
-<h6>This is heading six</h6>
-
-<p> The Prime Minister </p>
-<img src="images/keir_starmer.jpg" alt="photo of the prime minister" />
-
-<!--https://pinetools.com/image-color-picker, https://imagecolorpicker.com/-->
-
+</div>
 </body>
 </html>
